<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to Urban Quiz!</string>
    <string name="app_name">Urban Quiz</string>
    <string name="answerA">A?</string>
    <string name="answerB">B?</string>
    <string name="answerC">C?</string>
    <string name="answerD">D?</string>
    <string name="answerImage">Answer</string>
    <string name="startQuiz">Start Quiz</string>
    <string name="credits">About</string>
     <string name="logo">UQ Logo</string>
    <color name="blue">#1f8fff</color>
    <color name="navy">#00218f</color>
    <color name="paleblue">#BEE5FA</color>
    <color name="red">#111111</color>
    <color name="red2">#222222</color>
    <color name="red3">#333333</color>

</resources>