<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
       	android:background="@drawable/rounded_corners"
        android:layout_marginBottom="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="5dp" >

	    <TextView
	        android:id="@+id/textView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="fill_vertical"
	        android:scrollbars="vertical"
	        android:stretchColumns="0"
	        android:text="@string/hello"
	        android:textColor="@color/navy"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"/>

	</ScrollView>

    <TextView
        android:id="@+id/totalSoFar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
        android:text=""
        android:textColor="@color/navy" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/answerA" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/answerB" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/answerC" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/answerD" />

</LinearLayout>